Week 2 Web Assignment

--- a/index.html
+++ b/index.html
@@ -137,6 +137,6 @@
 
     </body>
     <footer>
-        <p>&copy; 2025. All Rights Reserved.</p>
+        <p>&copy; 2025. Bora Bags. All Rights Reserved.</p>
     </footer>
 </html>
